--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="memes-gallery" style="display:none">
+        <main class="memes-gallery">
             <div class="inner-container flex flex-wrap">
                 <ul class="memes-gallery__items flex space-between flex-wrap clean-list">
                     <!--<li class="memes-gallery__hexagon">
@@ -113,7 +113,6 @@
             </div>
         </main>
 
-
         <div class="about flex align-center">
             <div class="inner-container">
                 <div class="developer flex flex-col">
@@ -147,12 +146,29 @@
                 </div>
             </div>
         </div>
-        <div class="contact flex flex-wrap">
-            <div class="contact-form"></div>
-            <div class="contact-info"></div>
+        <div class="contact flex flex-col">
+        <div class="inner-container">
+            <div class="contact-form">
+                <div class="contact-form__title">Get in Touch</div>
+                <div class="contact-form__subtitle">In order to get in touch use the contact form below:</div> 
+                <form>
+                    <ul class="clean-list">
+                    <li><input type="text" placeholder="Name (Required)" class="contact-form__field"></li>
+                    <li><input type="email" placeholder="Email (Required)" class="contact-form__field"></li>
+                    <li><input type="text" placeholder="Subject" class="contact-form__field"></li>
+                    <li><textarea rows="8" placeholder="Write your message here..." class="contact-form__field"></textarea></li>
+                    </ul>
+            <div class="contact-form__send flex">
+                    <button class="contact-form__button">Send</button>
+        </div>
+                </form>
+            </div>
+            <div class="contact-info">Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. 
+                Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </div>
+        </div>
         </div>
         <footer>
-
+            © Copyright 2013 by PSDchat
         </footer>
     </div>
     <script src="js/utils.js"></script>
