--- a/index.html
+++ b/index.html
@@ -41,34 +41,20 @@
                 </ul>
             </nav>
         </header>
-        <main class="memes-gallery" style="display:none">
-            <div class="inner-container flex flex-wrap">
-                <ul class="memes-gallery__items flex space-between flex-wrap clean-list">
-                    <!--<li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/1.jpg" alt="meme" class="img-responsive meme__img" />                        
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/2.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/3.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/4.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/5.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/6.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>
-                    <li class="memes-gallery__hexagon">
-                        <img src="assets/imgs/memes/7.jpg" alt="meme" class="img-responsive meme__img" />
-                    </li>-->
-                </ul>
+        <main class="memes-gallery__container">
+            <div class="inner-container flex flex-col flex-wrap align-center">
+                
+                <div class="memes-gallery">
+                    <!--Hexogan template-->
+                    <div class="memes-gallery__meme-template" style="display: none;">
+                        <div class="face1"></div>
+                        <div class="face2"></div>
+                    </div>
+                </div>
+
                 <!-- Meme Generator -->
-                <div class="meme-generator flex space-between" style="display: none;">
-                    <button onclick="backToMemeGallery()">Go back</button>
+                <div class="meme-generator flex-col flex space-between" style="display: none;">
+                    <button onclick="backToGallery()">Go back</button>
                     <img src="" alt="meme" class="img-responsive" />
                     <form class="meme-edit__form flex flex-col">
                         <label for="topText">Top Text</label>
@@ -78,83 +64,52 @@
                     </form>
                 </div>
             </div>
-
-            <!--Hexogan fail take 1-->
-            <!--<ul class="memes-gallery__items flex space-between flex-wrap clean-list">
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                    <li class="memes-gallery__hexagon meme1">
-                        <div class="hexTop"></div>
-                        <div class="hexBottom"></div>
-                    </li>
-                </ul>-->
-            </div>
-        </main>
-
-
-        <div class="about flex align-center">
-            <div class="inner-container">
-                <div class="developer flex flex-col">
-                    <div class="developer-pic flex justify-center">
-                        <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
-                    </div>
-                        <div class="developer-name">
-                        HAIM
-                        </div>
-                    <div class="developer-title">
-                        President
-                    </div>
-                    <div class="developer-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis,
-                        beatae nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
-                    </div>
-                </div>
-                <div class="developer flex flex-col">
-                    <div class="developer-pic flex justify-center">
-                        <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
-                    </div>
-                    <div class="developer-name">
-                        MOSHE
-                        </div>
-                    <div class="developer-title">
-                        Vice President
-                    </div>
-                    <div class="developer-bio">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis,
-                        beatae nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="contact flex flex-wrap">
-            <div class="contact-form"></div>
-            <div class="contact-info"></div>
-        </div>
-        <footer>
-
-        </footer>
     </div>
+    </main>
+
+
+    <div class="about flex align-center">
+        <div class="inner-container">
+            <div class="developer flex flex-col">
+                <div class="developer-pic flex justify-center">
+                    <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
+                </div>
+                <div class="developer-name">
+                    HAIM
+                </div>
+                <div class="developer-title">
+                    President
+                </div>
+                <div class="developer-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae
+                    nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
+                </div>
+            </div>
+            <div class="developer flex flex-col">
+                <div class="developer-pic flex justify-center">
+                    <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
+                </div>
+                <div class="developer-name">
+                    MOSHE
+                </div>
+                <div class="developer-title">
+                    Vice President
+                </div>
+                <div class="developer-bio">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae nemo hic dicta
+                    commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact flex flex-wrap">
+        <div class="contact-form"></div>
+        <div class="contact-info"></div>
+    </div>
+    <footer>
+
+    </footer>
+    </div>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/model.js"></script>
     <script src="js/output.js"></script>
