About and contact responsive handling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="memes-gallery__container">
+        <main class="memes-gallery__container" >
             <div class="inner-container flex flex-col flex-wrap align-center">
 
                 <div class="memes-gallery">
@@ -63,65 +63,77 @@
                     </form>
                 </div>
             </div>
-    </div>
-    </main>
-    <div class="about flex align-center">
-        <div class="inner-container">
-            <div class="developer flex flex-col">
-                <div class="developer-pic flex justify-center">
-                    <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
+        </main>
+        <div class="about flex align-center" >
+            <div class="inner-container">
+                <div class="developer flex flex-col align-center">
+                    <!--<div class="developer-pic flex justify-center">
+                        <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
+                    </div>-->
+                    <div class="developer-pic developer_1 hexagon">
+                        <div class="face1"></div>
+                        <div class="face2"></div>
+                    </div>
+                    <div class="developer-story">
+                        <div class="developer-name">
+                            HAIM
+                        </div>
+                        <div class="developer-title">
+                            President
+                        </div>
+                        <div class="developer-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere
+                            omnis, beatae nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis
+                            iure optio.
+                        </div>
+                    </div>
                 </div>
-                <div class="developer-name">
-                    HAIM
-                </div>
-                <div class="developer-title">
-                    President
-                </div>
-                <div class="developer-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae
-                    nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
-                </div>
-            </div>
-            <div class="developer flex flex-col">
-                <div class="developer-pic flex justify-center">
-                    <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
-                </div>
-                <div class="developer-name">
-                    MOSHE
-                </div>
-                <div class="developer-title">
-                    Vice President
-                </div>
-                <div class="developer-bio">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae nemo hic dicta
-                    commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
+                <div class="developer flex flex-col align-center">
+                    <!--<div class="developer-pic flex justify-center">
+                        <img src="assets\imgs\memes\2.jpg" class="developer-img img-responsive" />
+                    </div>-->
+                    <div class="developer-pic developer_2 hexagon">
+                        <div class="face1"></div>
+                        <div class="face2"></div>
+                    </div>
+                    <div class="developer-story">
+                        <div class="developer-name">
+                            MOSHE
+                        </div>
+                        <div class="developer-title">
+                            Vice President
+                        </div>
+                        <div class="developer-bio">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae nemo hic dicta
+                            commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="contact flex flex-col">
-        <div class="inner-container">
-            <div class="contact-form">
+        <div class="contact flex flex-col">
+            <div class="inner-container flex flex-col">
                 <div class="contact-form__title">Get in Touch</div>
                 <div class="contact-form__subtitle">In order to get in touch use the contact form below:</div>
-                <form>
-                    <ul class="clean-list">
-                        <li><input type="text" placeholder="Name (Required)" class="contact-form__field"></li>
-                        <li><input type="email" placeholder="Email (Required)" class="contact-form__field"></li>
-                        <li><input type="text" placeholder="Subject" class="contact-form__field"></li>
-                        <li><textarea rows="8" placeholder="Write your message here..." class="contact-form__field"></textarea></li>
-                    </ul>
-                    <div class="contact-form__send flex">
-                        <button class="contact-form__button">Send</button>
-                    </div>
-                </form>
+                <div class="contact-form flex flex-col">
+                    <form class="contact-form__form">
+                        <ul class="clean-list">
+                            <li><input type="text" placeholder="Name (Required)" class="contact-form__field"></li>
+                            <li><input type="email" placeholder="Email (Required)" class="contact-form__field"></li>
+                            <li><input type="text" placeholder="Subject" class="contact-form__field"></li>
+                            <li><textarea rows="8" placeholder="Write your message here..." class="contact-form__field"></textarea></li>
+                        </ul>
+                        <div class="contact-form__send flex">
+                            <button class="contact-form__button">Send</button>
+                        </div>
+                    </form>
+                    <div class="contact-info">Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin
+                        sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </div>
+                </div>
             </div>
-            <div class="contact-info">Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet
-                volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </div>
         </div>
-    </div>
-    <footer>
-        © Copyright 2013 by PSDchat
-    </footer>
+        <footer>
+            © Copyright 2013 by PSDchat
+        </footer>
     </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="js/utils.js"></script>
