Fon awesome icons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="memes-gallery__container" >
+        <main class="memes-gallery__container">
             <div class="inner-container flex flex-col flex-wrap align-center">
 
                 <div class="memes-gallery">
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </main>
-        <div class="about flex align-center" >
+        <div class="about flex align-center">
             <div class="inner-container">
                 <div class="developer flex flex-col align-center">
                     <!--<div class="developer-pic flex justify-center">
@@ -84,6 +84,12 @@
                         <div class="developer-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere
                             omnis, beatae nemo hic dicta commodi consectetur magnam sapiente quisquam, eum enim, vel facilis
                             iure optio.
+                        </div>
+                        <div class="developer-socialmedia__icons">
+                            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                            <i class="fa fa-phone-square" aria-hidden="true"></i>
                         </div>
                     </div>
                 </div>
@@ -106,6 +112,12 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quas at rem quibusdam facere omnis, beatae nemo hic dicta
                             commodi consectetur magnam sapiente quisquam, eum enim, vel facilis iure optio.
                         </div>
+                        <div class="developer-socialmedia__icons">
+                            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                            <i class="fa fa-phone-square" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,8 +138,15 @@
                             <button class="contact-form__button">Send</button>
                         </div>
                     </form>
-                    <div class="contact-info">Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin
-                        sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae. </div>
+                    <div class="contact-info">
+                        <p> Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin
+                            sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus morbi vitae.</p>
+                        <div class="contact-details">
+                            <p><i class="fa fa-map-marker" aria-hidden="true"></i> Elm St. 14/05 Lost City</p>
+                            <p><i class="fa fa-phone" aria-hidden="true"></i> + 3528 331 86 35</p>
+                            <p><i class="fa fa-envelope" aria-hidden="true"></i> info@hexalcorp.com </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
