added initial canvas

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- Meme Generator -->
                 <div class="meme-generator flex-col flex space-between" style="display: none;">
                     <button onclick="backToGallery()">Go back</button>
-                    <img src="" alt="meme" class="img-responsive" />
+                    <canvas width="568" height="360" id="canvas">Sorry, no canvas available</canvas>
                     <form class="meme-edit__form flex flex-col">
                         <label for="topText">Top Text</label>
                         <input type="text" id="topText" />
@@ -139,6 +139,7 @@
     <script src="js/utils.js"></script>
     <script src="js/model.js"></script>
     <script src="js/output.js"></script>
+    <script src="js/canvas.js"></script>
     <script src="js/main.js"></script>
 </body>
 
