text on canvas improved

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <input type="text" id="topText" />
                         <label for="bottomText">Bottom Text</label>
                         <input type="text" id="bottomText" />
+                        <input type="submit" id="enter-text" onclick="return false;">
                     </form>
                 </div>
             </div>
